; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_speedtest1.c_speedtest1_random_ascii_fp.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_speedtest1.c_speedtest1_random_ascii_fp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"%d.%de%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @speedtest1_random_ascii_fp(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = call i32 (...) @speedtest1_random()
  store i32 %6, i32* %3, align 4
  %7 = call i32 (...) @speedtest1_random()
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = srem i32 %8, 10
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %5, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %12, %1
  %16 = load i32, i32* %4, align 4
  %17 = sdiv i32 %16, 10
  store i32 %17, i32* %4, align 4
  %18 = load i8*, i8** %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %3, align 4
  %22 = srem i32 %21, 200
  %23 = call i32 @sqlite3_snprintf(i32 100, i8* %18, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %20, i32 %22)
  ret void
}

declare dso_local i32 @speedtest1_random(...) #1

declare dso_local i32 @sqlite3_snprintf(i32, i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
